--- a/backend/templates/registration/register.html
+++ b/backend/templates/registration/register.html
@@ -27,10 +27,16 @@
         <div class="form-group">
             <label for="id_email">Email address:</label>
             {{ form.email }}
-        </div>
+        </div>        
         <div class="form-group">
             <label for="id_role">Role:</label>
             {{ form.role }}
+        </div>
+        <div id="majorGroup">
+            <div class="form-group">
+                <label for="id_major">Major:</label>
+                {{ form.major }}
+            </div>
         </div>
         <div class="form-group">
             <label for="id_id_number">Id number:</label>
@@ -122,5 +128,27 @@
         color: red;
         font-weight: bold;
     }
+    
 </style>
+    
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+    var roleSelect = document.getElementById('id_role');  
+    var majorGroup = document.getElementById('majorGroup'); 
+
+    function toggleMajorGroup() {
+        var selectedRole = roleSelect.value;
+        
+        if (selectedRole === 'student') {
+            majorGroup.style.display = 'block'; 
+        } else {
+            majorGroup.style.display = 'none'; 
+        }
+    }
+    
+    roleSelect.addEventListener('change', toggleMajorGroup);
+
+    toggleMajorGroup();
+});
+</script>
 {% endblock %}
