--- a/backend/templates/create_assignment.html
+++ b/backend/templates/create_assignment.html
@@ -72,6 +72,16 @@
                 <p><strong>Description:</strong> {{ assignment.description }}</p>
                 <p><strong>Start Date:</strong> {{ assignment.start_date|date:"F j, Y" }} at {{ assignment.start_time|date:"h:i a" }}</p>
                 <p><strong>Due Date:</strong> {{ assignment.due_date|date:"F j, Y" }} at {{ assignment.due_time|date:"h:i a" }}</p>
+                <!-- Display Extra Time Period -->
+                <p><strong>Extra Time:</strong>
+                    {% if assignment.extra_time_period == -1 %}
+                        Unlimited
+                    {% elif assignment.extra_time_period == 0 %}
+                        None
+                    {% else %}
+                        {{ assignment.extra_time_period }} day{{ assignment.extra_time_period|pluralize }}
+                    {% endif %}
+                </p>
             </li>
             {% empty %}
             <p>No assignments available for this class.</p>
