--- a/backend/templates/topbar.html
+++ b/backend/templates/topbar.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upgraded Top Bar</title>
+    <title>{% block title %}University Registration System{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/topbar.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -34,8 +34,13 @@
                     <i class="fas fa-user-circle"></i>
                 {% endif %}
             </a>
-            
         </div>
+    </div>
+
+    <!-- Main content -->
+    <div class="container-main" id="main-content">
+        {% block content %}
+        {% endblock %}
     </div>
 
     <!-- Script for Scroll Effect -->
